@@ -2,6 +2,19 @@ import mongoose from 'mongoose';
 import PostMessage from '../models/postMessage.js'
 
 
+export const getPost = async (req, res) => {
+  const { id } = req.params;
+
+  try{
+    const post = await PostMessage.findById(id);
+
+    res.status(200).json(post);
+  } catch (error) {
+    res.status(404).json({ message: error.message });
+  }
+
+}
+
 export const getPosts = async (req, res) => {
   const { page } = req.query;
 
